--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ Grid System 1 Style
     font-family: Almarai;
     font-weight:2px;
     letter-spacing: 2px;
-    font-size: 1.75rem;
+    font-size: 20px;
     text-transform: uppercase;
     padding: 0px 30px 0px;
     line-height: 1.75rem;
@@ -81,7 +81,7 @@ Grid System 1 Style
     font-family: Almarai;
     font-weight:2px;
     letter-spacing: 2px;
-    font-size: 2.5rem;
+    font-size: 24px;
     text-transform: uppercase;
     padding: 0px 30px 0px;
     line-height: 1em;
@@ -94,7 +94,7 @@ Grid System 1 Style
     letter-spacing: 1.5px;
     font-weight: 100;
     font-style:normal;
-    font-size: 1.25rem;
+    font-size: 18px;
     padding: 10px 30px 0px;
     line-height: 30px;
     color:white;
@@ -710,18 +710,39 @@ Screen Sizes
 
              @media (max-width: 1200px) {
                 #TextTitle{
-                    font-size: 1.5rem;
-                    line-height: 1.5rem; 
+                    font-family: Almarai;
+                    font-weight:2px;
+                    letter-spacing: 2px;
+                    font-size: 20px;
+                    text-transform: uppercase;
+                    padding: 0px 30px 0px;
+                    line-height: 1.75rem;
+                    color:white;
+                    transition: opacity 0.7s;
+                   
                 }
-
                 #h3{
-                    font-size: 2rem;
-                    line-height: 2rem;  
+                    font-family: Almarai;
+                    font-weight:2px;
+                    letter-spacing: 2px;
+                    font-size: 24px;
+                    text-transform: uppercase;
+                    padding: 0px 30px 0px;
+                    line-height: 1em;
+                    color:white;
+                    transition: opacity 0.7s;
+                   
                 }
-
                 #TextBody{
-                    font-size: 1rem;
-                    line-height: 1rem;
+                    font-family: Helvetica;
+                    letter-spacing: 1.5px;
+                    font-weight: 100;
+                    font-style:normal;
+                    font-size: 18px;
+                    padding: 10px 30px 0px;
+                    line-height: 30px;
+                    color:white;
+                    transition: opacity 0.7s;
                     
                 }
                 .gridsystem1 #RadiationText{
@@ -773,18 +794,39 @@ Screen Sizes
 
                 @media (max-width: 1000px) {
                     #TextTitle{
-                        font-size: 1.25rem;
-                        line-height: 1.25rem; 
+                        font-family: Almarai;
+                        font-weight:2px;
+                        letter-spacing: 2px;
+                        font-size: 20px;
+                        text-transform: uppercase;
+                        padding: 0px 30px 0px;
+                        line-height: 1.75rem;
+                        color:white;
+                        transition: opacity 0.7s;
+                       
                     }
-    
                     #h3{
-                        font-size: 1.75rem;
-                        line-height: 1.5rem;  
+                        font-family: Almarai;
+                        font-weight:2px;
+                        letter-spacing: 2px;
+                        font-size: 24px;
+                        text-transform: uppercase;
+                        padding: 0px 30px 0px;
+                        line-height: 1em;
+                        color:white;
+                        transition: opacity 0.7s;
+                       
                     }
-    
                     #TextBody{
-                        font-size: .75rem;
-                        line-height: .5rem;
+                        font-family: Helvetica;
+                        letter-spacing: 1.5px;
+                        font-weight: 100;
+                        font-style:normal;
+                        font-size: 18px;
+                        padding: 10px 30px 0px;
+                        line-height: 30px;
+                        color:white;
+                        transition: opacity 0.7s;
                         
                     }
                     .gridsystem1 #RadiationText{
@@ -903,18 +945,39 @@ Screen Sizes
 
                         @media (max-width: 480px) {
                             #TextTitle{
-                                font-size: .5rem;
-                                line-height: .45rem; 
+                                font-family: Almarai;
+                                font-weight:2px;
+                                letter-spacing: 2px;
+                                font-size: 20px;
+                                text-transform: uppercase;
+                                padding: 0px 30px 0px;
+                                line-height: 1.75rem;
+                                color:white;
+                                transition: opacity 0.7s;
+                               
                             }
-            
                             #h3{
-                                font-size: .75rem;
-                                line-height: .7rem;  
+                                font-family: Almarai;
+                                font-weight:2px;
+                                letter-spacing: 2px;
+                                font-size: 24px;
+                                text-transform: uppercase;
+                                padding: 0px 30px 0px;
+                                line-height: 1em;
+                                color:white;
+                                transition: opacity 0.7s;
+                               
                             }
-            
                             #TextBody{
-                                font-size: .35rem;
-                                line-height: .36rem;
+                                font-family: Helvetica;
+                                letter-spacing: 1.5px;
+                                font-weight: 100;
+                                font-style:normal;
+                                font-size: 18px;
+                                padding: 10px 30px 0px;
+                                line-height: 30px;
+                                color:white;
+                                transition: opacity 0.7s;
                                 
                             }
                             .gridsystem1 #RadiationText{
@@ -967,18 +1030,39 @@ Screen Sizes
                             }
                             @media (max-width: 250px) {
                                 #TextTitle{
-                                    font-size: .25rem;
-                                    line-height: .25rem; 
+                                    font-family: Almarai;
+                                    font-weight:2px;
+                                    letter-spacing: 2px;
+                                    font-size: 20px;
+                                    text-transform: uppercase;
+                                    padding: 0px 30px 0px;
+                                    line-height: 1.75rem;
+                                    color:white;
+                                    transition: opacity 0.7s;
+                                   
                                 }
-                
                                 #h3{
-                                    font-size: .35rem;
-                                    line-height: .35rem;  
+                                    font-family: Almarai;
+                                    font-weight:2px;
+                                    letter-spacing: 2px;
+                                    font-size: 24px;
+                                    text-transform: uppercase;
+                                    padding: 0px 30px 0px;
+                                    line-height: 1em;
+                                    color:white;
+                                    transition: opacity 0.7s;
+                                   
                                 }
-                
                                 #TextBody{
-                                    font-size: .2rem;
-                                    line-height: .21rem;
+                                    font-family: Helvetica;
+                                    letter-spacing: 1.5px;
+                                    font-weight: 100;
+                                    font-style:normal;
+                                    font-size: 18px;
+                                    padding: 10px 30px 0px;
+                                    line-height: 30px;
+                                    color:white;
+                                    transition: opacity 0.7s;
                                     
                                 }
                                 .gridsystem1 #RadiationText{
